<resources>

    <string name="msg_task_processing">正在处理，请稍后...</string>
    <string name="get_order_processing">正在接单，请稍后...</string>
    <string name="get_no_order_processing">正在撤单，请稍后...</string>
    <string name="msg_app_exit">很抱歉，程序出现异常，即将退出。</string>
    <string name="loading_refresh_over">更新加载完成...</string>
    <string name="loading_refresh_tip">松手后将加载更新...</string>
    <string name="loading_refresh">正在加载更新...</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="not_updated_yet">暂未更新过</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <string name="updated_just_now">刚刚更新</string>
    <string name="time_error">时间有问题</string>
    <string name="xlistview_footer_hint_normal">上拉加载更多...</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="toast_register_between">密码需由为6-20的字符组成</string>
    <string name="toast_uploading">正在上传，请稍等</string>
    <string name="identify_phone">手机号</string>

    <!-- toast -->
    <string name="toast_image_error">上传的图片有问题，请重新上传</string>
    <string name="toast_time_fail">时间选择出错</string>
    <string name="toast_time_null">输入内容不为空</string>
    <string name="toast_upload_fail">上传失败</string>

    <!-- 微信分享 -->
    <string name="tv_weixin_good_f">微信好友</string>
    <string name="tv_weixin_circle_f">朋友圈</string>

    <!-- java代码中引用的独立字符串资源 -->
    <string name="func_desc_reset">重置密码</string>
    <string name="func_desc_register">商户注册</string>

    <!-- Common -->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="phonenum">+86</string>
    <string name="hint_input_phonenum">请输入手机号</string>
    <string name="hint_right_phonenum">请输入正确的手机格式</string>
    <string name="hint_right_phone">请输入正确的手机号码</string>
    <string name="hint_right_userCode">请输入账号</string>
    <string name="error_telnum">账号格式错误，请使用正确的手机号码</string>
    <string name="identify_code">输码验票</string>
    <string name="hint_input_indentify_code">请输入验证码</string>
    <string name="send_identify_code">发送验证码</string>
    <string name="pwd_reset">"密码"</string>
    <string name="hint_input_pwd">请输入密码</string>
    <string name="confirm">确认</string>
    <string name="reset">重置</string>
    <string name="scan_text">将二维码放入框内，即可自动扫描</string>
    <string name="time_out">营业的结束时间早于开始时间</string>

    <!-- LoginActivity -->
    <string name="tv_username">账号</string>
    <string name="tv_password">密码</string>
    <string name="edt_hint_input_username">手机号码</string>
    <string name="edt_hint_input_password">请输入密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="remember_pwd">自动登录</string>
    <string name="btn_login">确定</string>
    <string name="btn_register">注册</string>
    <string name="describtion_of_shopcard">商家会员卡图片</string>
    <string name="login_running">正在登录请稍后</string>
    <string name="login_password_error">密码不匹配</string>
    <string name="login_name_noexist">用户名不存在</string>
    <string name="login_pass_nothing">请输入密码</string>
    <string name="login_name_nothing">用户已经被禁用</string>
    <string name="login_internet_error">网络异常</string>
    <string name="login_custinternet_error">客户端未联网</string>
    <string name="two_code_error">二维码异常</string>
    <string name="login_custinternet_activate">用户需要去激活</string>
    <string name="no_huiquan_competence">您没有权限进入惠圈管家</string>

    <!-- RegisterAactivity -->
    <string name="register_title">商户注册</string>
    <string name="tv_business_licence">营业执照</string>
    <string name="edt_hint_input_business_licence">请输入营业执照</string>
    <string name="chb_obey">遵守</string>
    <string name="tv_baomi_terms">《惠圈用户注册协议》</string>
    <string name="mainact_shopname">店铺名称</string>

    <!-- tools -->
    <string name="share">分享</string>
    <!-- 优惠券时间 -->
    <string name="no_limit_time">不限使用时间</string>
    <string name="use_time">使用日期：</string>
    <string name="start_use_time">开始使用日期：</string>
    <string name="end_use_time">截止使用日期：</string>
    <string name="use_no_time">对不起,未到使用时间请等待</string>
    <string name="day_use">全天可用</string>
    <string name="use_time_fail">优惠券已过期</string>
    <string name="use_nocsm_time">对不起,不在消费时间范围内</string>
    <string name="start_day_date">00:00</string>
    <string name="use_limit_date">0000.00.00</string>
    <string name="end_day_date">23:59</string>

    <!-- 网络不可用 -->
    <string name="check_net">网络请求失败，请检查您的网络设置</string>
    <string name="order_check">订单结算</string>

</resources>