<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LyOutSet" >

    <include layout="@layout/common_title_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_bar"
            android:layout_marginTop="10dp"
            android:background="@color/white" >

            <TextView
                android:id="@+id/tv_register_name"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_centerVertical="true"
                android:text="@string/identify_phone"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edt_reset_phonenum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toRightOf="@+id/tv_register_name"
                android:layout_toLeftOf="@id/btn_reset_send_iden_code"
                android:background="@null"
                android:hint="@string/hint_input_phonenum"
                android:inputType="number"
                android:maxLength="11"
                android:singleLine="true"
                android:textSize="16sp" >
            </EditText>

            <TextView
                android:id="@+id/btn_reset_send_iden_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:background="@drawable/register_indencode" />
        </RelativeLayout>

        <TextView style="@style/VLine" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_bar"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_reset_iden_code"
                android:layout_width="60dp"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="验证码"
                android:textSize="16sp"/>
            <!-- 验证码 -->

            <EditText
                android:id="@+id/edt_reset_iden_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/tv_reset_iden_code"
                android:background="@null"
                android:hint="@string/hint_input_indentify_code"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true"
                android:textSize="16sp" />
        </RelativeLayout>

        <TextView style="@style/VLine" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_bar"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_reset_pwd"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:text="@string/pwd_reset"
                android:textSize="16sp"/>
            <!-- 密码 -->

            <EditText
                android:id="@+id/edt_reset_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_toLeftOf="@+id/tv_reset_showpassword"
                android:layout_toRightOf="@+id/tv_reset_pwd"
                android:background="@null"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:hint="@string/hint_input_pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="16sp" >
            </EditText>

            <CheckBox
                android:id="@+id/tv_reset_showpassword"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="15dp"
                android:background="@null"
                android:button="@drawable/sel_loginpass_state" />
        </RelativeLayout>

        <TextView style="@style/VLine" />
    </LinearLayout>

    <include layout="@layout/common_loginbtn_ok" />

</LinearLayout>